wordpress-template.yaml
AWSTemplateFormatVersion: "2010-09-09"
Parameters:
  mysqlRootPassword:
    Description: "Database root password."
    Type: "String"
    NoEcho: "true"
  mysqlDatabase:
      Description: "Default database."
      Type: "String"
      Default: "wordpress"
  mysqlUser:
    Description: "Database user."
    Type: "String"
    Default: "wpdbadmin"
  mysqlPassword:
    Description: "Database user password."
    Type: "String"
    NoEcho: "true"
  authKey:
    Description: "Auth key."
    Type: "String"
    Default: "@G9uQ-k;2CMlzx|Cb/3!A%~Uw5l#C7Oz0&GyOL?-O+Yh.v+oK3]O_uDXnDW>Yt!P"
    NoEcho: "true"
  secureAuthKey:
    Description: "Secure auth key."
    Type: "String"
    Default: "%NgX+yn-17++p2vQQf8Nu+d<g)VAz;RIcDaWZY,}sm zrZOX+hRf`m{4O|RG|8h%"
    NoEcho: "true"
  loggedInKey:
    Description: "Logged in key."
    Type: "String"
    Default: ">RaZqf)aSXU(UZxVw|Sf>-}=K|ud@|X~c|H^.EL:U^1I%.2%qRK%&n<c|^+#*-~O"
    NoEcho: "true"
  nonceKey:
    Description: "Nonce key."
    Type: "String"
    Default: "{G!U:@y,75(l;^`U:.c_[xl8=mYTJ<!)!B<VENd2%ag`l^5v(V(VWTdQyG2h}f.>"
    NoEcho: "true"
  authSalt:
    Description: "Auth salt."
    Type: "String"
    Default: "euF6Z(Cwj=^[wLVL]s]Gm(Tv7F4X ..9u*g64qjRQ%?LwP3}]uL||!8nra$d*}!y"
    NoEcho: "true"
  secureAuthSalt:
    Description: "Secure auth salt."
    Type: "String"
    Default: "WG|:f0Z%_Ls#_gf3BE|K),^M-gu+S8&p.?`egj{-{2CnI2j[zVSY<@tLCbAjd+t$"
    NoEcho: "true"
  loggedInSalt:
    Description: "Logged in salt."
    Type: "String"
    Default: "b:q`F= WK1pa{?w5%Bv@nZK~5-c5T67$D@7q(?|~s[ `yJnEI-yByB<Fu6EdQ^^B"
    NoEcho: "true"
  nonceSalt:
    Description: "Nonce salt."
    Type: "String"
    Default: "`66jB-c}c|3pS+j`QUcNr<opJja &=.is1V^>5eWk;&s.36XoOL{ItsB7Id?R><Y"
    NoEcho: "true"
Resources:
  Vpc:
    Type: AWS::EC2::VPC
    Properties:
      EnableDnsSupport: "true"
      EnableDnsHostnames: "true"
      CidrBlock: "10.0.0.0/16"
      Tags:
        - Key: "Environment"
          Value: "Test"
  PublicSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref "Vpc"
      CidrBlock: "10.0.0.0/24"
      AvailabilityZone: "us-east-1a"
  PublicSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref "Vpc"
      CidrBlock: "10.0.1.0/24"
      AvailabilityZone: "us-east-1b"
  ElbSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId: !Ref "Vpc"
      GroupDescription: "Allow http access from everywhere"
      SecurityGroupIngress:
        - IpProtocol: "tcp"
          FromPort: "80"
          ToPort: "80"
          CidrIp: "0.0.0.0/0"
  WebserverSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId: !Ref "Vpc"
      GroupDescription: "Allow port 80 from ELB"
      SecurityGroupIngress:
        - IpProtocol: "tcp"
          FromPort: "80"
          ToPort: "80"
          SourceSecurityGroupId: !Ref "ElbSG"
  DatabaseSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId: !Ref "Vpc"
      GroupDescription: "Allow access from webservers"
      SecurityGroupIngress:
        - IpProtocol: "tcp"
          FromPort: "3306"
          ToPort: "3306"
          SourceSecurityGroupId: !Ref "WebserverSG"
  InternetGW:
    Type: AWS::EC2::InternetGateway
    Properties: {}
  VpcGwAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId: !Ref "InternetGW"
      VpcId: !Ref "Vpc"
  PublicRT:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref "Vpc"
  PublicRoute:
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: "0.0.0.0/0"
      RouteTableId: !Ref "PublicRT"
      GatewayId: !Ref "InternetGW"
    DependsOn:
      - "InternetGW"
  PublicSubnet1RTassoc:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref "PublicRT"
      SubnetId: !Ref "PublicSubnet1"
  PublicSubnet2RTassoc:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref "PublicRT"
      SubnetId: !Ref "PublicSubnet2"
  WordpressCluster:
    Type: AWS::ECS::Cluster
  WebService:
    Type: AWS::ECS::Service
    DependsOn:
      - "ELBListener"
    Properties:
      Cluster: !Ref "WordpressCluster"
      DesiredCount: "3"
      LaunchType: "FARGATE"
      TaskDefinition: !Ref "WebDefinition"
      NetworkConfiguration:
        AwsvpcConfiguration:
          AssignPublicIp: "ENABLED"
          SecurityGroups:
            - !Ref "WebserverSG"
          Subnets:
            - !Ref "PublicSubnet1"
            - !Ref "PublicSubnet2"
      LoadBalancers:
        - ContainerName: "wordpress"
          ContainerPort: "80"
          TargetGroupArn: !Ref ELBTargetGroup
  WebDefinition:
    Type: "AWS::ECS::TaskDefinition"
    Properties:
      Cpu: "256"
      Memory: "512"
      NetworkMode: "awsvpc"
      RequiresCompatibilities: ["FARGATE"]
      TaskRoleArn: !Ref "ECSTaskRole"
      ExecutionRoleArn: !Ref "ECSExecRole"
      ContainerDefinitions:
        - Name: "wordpress"
          Image: "ghcr.io/ustseis615/wordpress"
          Essential: "true"
          PortMappings:
            - ContainerPort: 80
          LogConfiguration:
            LogDriver: "awslogs"
            Options:
              awslogs-group: "fargate-wordpress"
              awslogs-create-group: "true"
              awslogs-region: !Ref "AWS::Region"
              awslogs-stream-prefix: "ecs"
          Environment:
            - Name: "WORDPRESS_DB_HOST"
              Value: "db.service.wordpress:3306"
            - Name: "WORDPRESS_DB_USER"
              Value: !Ref "mysqlUser"
            - Name: "WORDPRESS_DB_PASSWORD"
              Value: !Ref "mysqlPassword"
            - Name: "WORDPRESS_DB_NAME"
              Value: !Ref "mysqlDatabase"
            - Name: "WORDPRESS_AUTH_KEY"
              Value: !Ref "secureAuthKey"
            - Name: "WORDPRESS_LOGGED_IN_KEY"
              Value: !Ref "loggedInKey"
            - Name: "WORDPRESS_NONCE_KEY"
              Value: !Ref "nonceKey"
            - Name: "WORDPRESS_AUTH_SALT"
              Value: !Ref "authSalt"
            - Name: "WORDPRESS_SECURE_AUTH_SALT"
              Value: !Ref "secureAuthSalt"
            - Name: "WORDPRESS_LOGGED_IN_SALT"
              Value: !Ref "loggedInSalt"
            - Name: "WORDPRESS_NONCE_SALT"
              Value: !Ref "nonceSalt"
  DBService:
    Type: AWS::ECS::Service
    Properties:
      Cluster: !Ref WordpressCluster
      DesiredCount: "1"
      LaunchType: "FARGATE"
      ServiceRegistries:
        - RegistryArn: !GetAtt DBServiceDiscovery.Arn
      TaskDefinition: !Ref DBDefinition
      NetworkConfiguration:
        AwsvpcConfiguration:
          AssignPublicIp: "ENABLED"
          SecurityGroups:
            - !Ref "DatabaseSG"
          Subnets:
            - !Ref "PublicSubnet1"
            - !Ref "PublicSubnet2"
  DBDefinition:
    Type: AWS::ECS::TaskDefinition
    Properties:
      Cpu: "256"
      Memory: "512"
      NetworkMode: "awsvpc"
      RequiresCompatibilities: ["FARGATE"]
      TaskRoleArn: !Ref "ECSTaskRole"
      ExecutionRoleArn: !Ref "ECSExecRole"
      ContainerDefinitions:
        - Name: "wordpressdb"
          Image: "ghcr.io/ustseis615/mariadb"
          Essential: "true"
          PortMappings:
            - ContainerPort: 3306
          LogConfiguration:
            LogDriver: "awslogs"
            Options:
              awslogs-group: "fargate-wordpressdb"
              awslogs-create-group: "true"
              awslogs-region: !Ref "AWS::Region"
              awslogs-stream-prefix: "ecs"
          Environment:
            - Name: "MYSQL_ROOT_PASSWORD"
              Value: !Ref "mysqlRootPassword"
            - Name: "MYSQL_USER"
              Value: !Ref "mysqlUser"
            - Name: "MYSQL_PASSWORD"
              Value: !Ref "mysqlPassword"
            - Name: "MYSQL_DATABASE"
              Value: !Ref "mysqlDatabase"
  ECSTaskRole:
    Type: "AWS::IAM::Role"
    Properties:
      ManagedPolicyArns:
        - "arn:aws:iam::aws:policy/service-role/AmazonECSTaskExecutionRolePolicy"
      AssumeRolePolicyDocument:
        Version: "2012-10-17"
        Statement:
          - Effect: "Allow"
            Action: [ "sts:AssumeRole" ]
            Principal:
              Service: "ecs-tasks.amazonaws.com"
  ECSExecRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: "2012-10-17"
        Statement:
          - Effect: "Allow"
            Action: [ "sts:AssumeRole" ]
            Principal:
              Service: "ecs-tasks.amazonaws.com"
      Policies:
        - PolicyName: "AmazonECSExecutionRolePolicy"
          PolicyDocument:
            Version: "2012-10-17"
            Statement:
              - Effect: "Allow"
                Action:
                  - "logs:CreateLogStream"
                  - "logs:CreateLogGroup"
                  - "logs:DescribeLogGroups"
                  - "logs:PutLogEvents"
                Resource: "*"
  ELB:
    Type: "AWS::ElasticLoadBalancingV2::LoadBalancer"
    Properties:
      LoadBalancerAttributes:
        - Key: "idle_timeout.timeout_seconds"
          Value: "30"
      Name: !Join ["", [!Ref "AWS::StackName", "-alb"]]
      Scheme: "internet-facing"
      SecurityGroups: [ !Ref "ElbSG" ]
      Subnets:
        - !Ref "PublicSubnet1"
        - !Ref "PublicSubnet2"
      Tags:
        - Key: "Name"
          Value: !Join ["", [!Ref "AWS::StackName", "-alb"]]
  ELBListener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      DefaultActions:
        - TargetGroupArn: !Ref "ELBTargetGroup"
          Type: "forward"
      LoadBalancerArn: !Ref "ELB"
      Port: "80"
      Protocol: "HTTP"
  ELBTargetGroup:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      HealthCheckPath: "/"
      HealthCheckProtocol: "HTTP"
      HealthCheckIntervalSeconds: 30
      HealthCheckTimeoutSeconds: 5
      HealthyThresholdCount: 2
      UnhealthyThresholdCount: 5
      Matcher:
        HttpCode: "200,302"
      TargetType: "ip"
      Port: 80
      Protocol: "HTTP"
      TargetGroupAttributes:
        - Key: "deregistration_delay.timeout_seconds"
          Value: "30"
      VpcId: !Ref "Vpc"
  ServiceDiscoveryNamespace:
    Type: AWS::ServiceDiscovery::PrivateDnsNamespace
    Properties:
      Name: "service.wordpress"
      Vpc: !Ref "Vpc"
  DBServiceDiscovery:
    Type: AWS::ServiceDiscovery::Service
    Properties:
      Name: "db"
      DnsConfig:
        DnsRecords:
          - Type: "A"
            TTL: "10"
        NamespaceId: !Ref "ServiceDiscoveryNamespace"
      HealthCheckCustomConfig:
        FailureThreshold: 1
Outputs:
  ELBEndpoint:
    Description: "ELB DNS endpoint address"
    Value: !GetAtt ELB.DNSName
